java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint4.pass
package org.netbeans.test.java.hints;

import java.util.Collections;

public class ImportTest4 {
    
    /** Creates a new instance of ImportTest */
    public ImportTest4() {
        Collections.<LinkedList>emptyList();
    }
    
}
